<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_getfeedback"
        android:name="com.example.icar.ui.feedback.GetFeedBackFragment"
        android:label="@string/menu_get_feedback"
        tools:layout="@layout/fragment_get_feed_back" />
    <fragment
        android:id="@+id/nav_addcar"
        android:name="com.example.icar.ui.addcar.AddCarFragment"
        android:label="@string/menu_add_car"
        tools:layout="@layout/fragment_add_car" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.icar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_transaction"
        android:name="com.example.icar.ui.transaction.TransactionFragment"
        android:label="@string/menu_transaction"
        tools:layout="@layout/fragment_transaction" />

</navigation>